se arreglo el chatbot y ya funciona bien

--- a/templates/carrito/checkout.html
+++ b/templates/carrito/checkout.html
@@ -26,9 +26,9 @@ if (cart.length === 0) {
 }
 
 // Redirigir directamente a la URL de Stripe al presionar "Pagar ahora"
-document.querySelector('.btn-success').addEventListener('click', (event) => {
-  event.preventDefault();
-  window.location.href = 'https://checkout.stripe.com/c/pay/cs_test_a1DzzO4lW2iIVlDdi88rEk1sPBoiHyNigNx6AZv9J8IdAJJF2T7eDJpUBD#fidkdWxOYHwnPyd1blpxYHZxWjA0VlRMXHxENW9JdjA9UFVhdUhwdnA9MWpVZn90T3xIS2xkfDw9fE5TRDFGalBQNG1rUj1jVExIUzFURGtqaDBdNmNVcG58UDVcT1NQcktncWMzR04wdkx8NTVGYElsSkxkfScpJ2hsYXYnP34nYnBsYSc%2FJzwxYDBmNDZnKGE9NzMoMWMyPCg8YTNkKDRhY2BjMDRjZmBhMjxnZzBjMScpJ2hwbGEnPydnYDU1YWRjPCg1MWAyKDE3NjMoZDUzMigzYDxkZGdnYTU9NGNgNDQ3MmQnKSd2bGEnPydnNzYwNDwwZihhZmEzKDEwZmMoPDVkYyhmMzU9YTNmZmMyN2MzPTVgMzIneCknZ2BxZHYnP15YKSdpZHxqcHFRfHVgJz8ndmxrYmlgWmxxYGgnKSd3YGNgd3dgd0p3bGJsayc%2FJ21xcXU%2FKio0NzIrNSs1KzQ%2FPTU1NSd4JSUl';
-});
+//document.querySelector('.btn-success').addEventListener('click', (event) => {
+  //event.preventDefault();
+  //window.location.href = 'https://checkout.stripe.com/c/pay/cs_test_a1DzzO4lW2iIVlDdi88rEk1sPBoiHyNigNx6AZv9J8IdAJJF2T7eDJpUBD#fidkdWxOYHwnPyd1blpxYHZxWjA0VlRMXHxENW9JdjA9UFVhdUhwdnA9MWpVZn90T3xIS2xkfDw9fE5TRDFGalBQNG1rUj1jVExIUzFURGtqaDBdNmNVcG58UDVcT1NQcktncWMzR04wdkx8NTVGYElsSkxkfScpJ2hsYXYnP34nYnBsYSc%2FJzwxYDBmNDZnKGE9NzMoMWMyPCg8YTNkKDRhY2BjMDRjZmBhMjxnZzBjMScpJ2hwbGEnPydnYDU1YWRjPCg1MWAyKDE3NjMoZDUzMigzYDxkZGdnYTU9NGNgNDQ3MmQnKSd2bGEnPydnNzYwNDwwZihhZmEzKDEwZmMoPDVkYyhmMzU9YTNmZmMyN2MzPTVgMzIneCknZ2BxZHYnP15YKSdpZHxqcHFRfHVgJz8ndmxrYmlgWmxxYGgnKSd3YGNgd3dgd0p3bGJsayc%2FJ21xcXU%2FKio0NzIrNSs1KzQ%2FPTU1NSd4JSUl';
+//});
 </script>
 {% endblock %}
