--- a/core/templates/core/inicio.html
+++ b/core/templates/core/inicio.html
@@ -18,7 +18,7 @@
          <a href="{% url 'usuarios:register' %}" class="btn btn-outline-primary btn-lg">
            <i class="bi bi-person-plus me-2"></i> Registrarse
          </a>
-        <a href="https://wa.me/qr/7EO6S4QUAKTUJ1" class="btn btn-outline-success btn-lg">
+        <a href="https://api.whatsapp.com/send?phone=59171972238&fbclid=IwdGRjcANswOBjbGNrA2zA1mV4dG4DYWVtAjExAAEeKW50x--5yqoet8rEdMWWA-x9_5OlKSOEh30898P-6hmNGYtUN49vIaR3zp8_aem_GDNLaemVvxCcbNUOCS_e5g" class="btn btn-outline-success btn-lg">
           <i class="bi bi-whatsapp me-2"></i> Contáctanos por WhatsApp
         </a>
       </div>
