--- a/templates/base.html
+++ b/templates/base.html
@@ -161,9 +161,9 @@
   <div class="container py-4 d-flex flex-column flex-md-row justify-content-between align-items-center gap-2">
     <span class="text-secondary">© {{ now|date:"Y" }} Adonai Pet Shop — La Paz, Bolivia</span>
     <div class="d-flex gap-3">
-      <a href="#" aria-label="Facebook Adonai"><i class="bi bi-facebook fs-5"></i></a>
-      <a href="#" aria-label="Instagram Adonai"><i class="bi bi-instagram fs-5"></i></a>
-      <a href="#" aria-label="WhatsApp Adonai"><i class="bi bi-whatsapp fs-5"></i></a>
+      <a href="https://www.facebook.com/p/Veterinaria-ADONAI-100034427936150/?locale=es_LA" aria-label="Facebook Adonai"><i class="bi bi-facebook fs-5"></i></a>
+      <a href="https://www.instagram.com/petshopadonai_?igsh=YmQxMzI2ZWRpMGUz" aria-label="Instagram Adonai"><i class="bi bi-instagram fs-5"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=59171972238&fbclid=IwdGRjcANswOBjbGNrA2zA1mV4dG4DYWVtAjExAAEeKW50x--5yqoet8rEdMWWA-x9_5OlKSOEh30898P-6hmNGYtUN49vIaR3zp8_aem_GDNLaemVvxCcbNUOCS_e5g" aria-label="WhatsApp Adonai"><i class="bi bi-whatsapp fs-5"></i></a>
     </div>
   </div>
 </footer>
