--- a/templates/panel/base_panel.html
+++ b/templates/panel/base_panel.html
@@ -49,9 +49,10 @@
     <a href="{% url 'panel:dashboard' %}" class="{% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}">Resumen</a>
     <a href="{% url 'panel:inventario_list' %}" class="{% if 'inventario' in request.path %}active{% endif %}">Inventario</a>
     <a href="{% url 'panel:categoria_list' %}" class="{% if 'categorias' in request.path %}active{% endif %}">Categorías</a>
-  <a href="{% url 'panel:empleado_list' %}" class="{% if 'empleados' in request.path %}active{% endif %}">Empleados</a>
-  <a href="{% url 'panel:cliente_list' %}" class="{% if 'clientes' in request.path %}active{% endif %}">Clientes</a>
-  <a href="{% url 'panel:promociones' %}" class="{% if 'promociones' in request.path %}active{% endif %}">Promociones</a>
+    <a href="{% url 'panel:empleado_list' %}" class="{% if 'empleados' in request.path %}active{% endif %}">Empleados</a>
+    <a href="{% url 'panel:cliente_list' %}" class="{% if 'clientes' in request.path %}active{% endif %}">Clientes</a>
+    <a href="{% url 'panel:promociones' %}" class="{% if 'promociones' in request.path %}active{% endif %}">Promociones</a>
+    <a href="{% url 'panel:cupones' %}" class="{% if 'cupones' in request.path %}active{% endif %}">Cupones</a>
     <hr>
     <a href="{% url 'catalogo' %}">Ver Tienda</a>
     {% if request.user.is_authenticated %}
